<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>employee_list</class>
 <widget class="QMainWindow" name="employee_list">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>552</width>
    <height>490</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Employee List</string>
  </property>
  <property name="windowIcon">
   <iconset>
    <normaloff>img/icon/list.png</normaloff>img/icon/list.png</iconset>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QGridLayout" name="gridLayout" rowstretch="0,0">
    <item row="1" column="0">
     <layout class="QVBoxLayout" name="verticalLayout" stretch="2,1,8">
      <item>
       <widget class="QLabel" name="label">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="font">
         <font>
          <family>Perpetua</family>
          <pointsize>28</pointsize>
          <italic>true</italic>
          <bold>true</bold>
         </font>
        </property>
        <property name="styleSheet">
         <string notr="true">background-color: rgb(6, 255, 198);
color: rgb(225, 6, 139);</string>
        </property>
        <property name="text">
         <string>Employee List</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="addEmployee_btn">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
        <property name="font">
         <font>
          <pointsize>12</pointsize>
          <bold>true</bold>
         </font>
        </property>
        <property name="styleSheet">
         <string notr="true">background-color: rgb(115, 255, 83);</string>
        </property>
        <property name="text">
         <string>ðŸ”—</string>
        </property>
       </widget>
      </item>
      <item>
       <layout class="QGridLayout" name="grid_emp_list"/>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
